<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_name" translatable="false">CalcuLatto</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="info">Info</string>
    <string name="item_info_title" translatable="false">[Section Item Info]</string>
    <string name="pos_in_section" translatable="false">Position in section:</string>
    <string name="pos_in_adapter" translatable="false">Position in adapter:</string>
    <string name="view_type" translatable="false">View type:</string>
    <string name="has_header" translatable="false">Has header?</string>
    <string name="has_footer" translatable="false">Has footer?</string>
    <string name="header_pos" translatable="false">"Header position:</string>
    <string name="footer_pos" translatable="false">"Footer position:</string>
    <string name="section_info_title" translatable="false">[Section Info]</string>
    <string name="close">Close</string>
    <string name="generals">General Calculations</string>
    <string name="basic">Basic</string>
    <string name="advanced_calculations">Advanced Calculations</string>
    <string name="about">About</string>
    <string name="all_calculations">All Calculations</string>
    <string name="dari">Developed by:</string>
    <string name="firstdateinfo">Created since: 5th January 2023</string>
    <string name="speed">Speed</string>
    <string name="length">Length</string>
    <string name="area">Area</string>
    <string name="date">Date</string>
    <string name="mass">Mass</string>
    <string name="health">Health</string>
    <string name="numeral_systems">Numeral Systems</string>
    <string name="temperature">Temperature</string>
    <string name="volume">Volume</string>
    <string name="other_calculations">Other Calculations</string>
    <string name="probability">Probability</string>
    <string name="unitconverter">Unit Converter</string>
    <string name="weight">Weight</string>
    <string name="power">Power</string>
    <string name="energy">Energy</string>
    <string name="velocity">Velocity</string>
    <string name="time">Time</string>
    <string name="otherformulas" translatable="false">ƒ</string>
    <string name="formulas">Formulas</string>
    <string name="cancel">Cancel</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="calculate">Calculate</string>
    <string name="height">Height</string>
    <string name="value">Value</string>
    <string name="age">Age</string>
    <string name="birthdate">Birthdate</string>
    <string name="startdate">Start Date</string>
    <string name="remainingdays">Your birthday is in </string>
    <string name="selectdate">Select the date</string>
    <string name="days">days</string>
    <string name="dayands">day(s)</string>
    <string name="hours">hours</string>
    <string name="years">years</string>
    <string name="monthss">months</string>
    <string name="weeks">weeks</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="angle">Angle</string>
    <string name="others">Others</string>
    <string name="result">Result:</string>
    <string name="common">Common</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="version_history" translatable="false">
— 1.0.1 —\n
1. Fixed bugs\n\n
— 1.0.2 —\n
1. Fixed bugs\n\n
— 1.0.5 —\n
1. Adding new calculations\n
2. Basic calculator expansion\n
3. Obfuscation\n
4. Fixex bugs\n\n
— 1.10 —\n
1. Adding new calculations\n
2. Fixex bugs\n\n
— 2.0 —\n
1. Adding new calculations\n
2. Availability to Android for Desktop (Chrome OS)\n\n
— 2.1 —\n
1. Adding new calculations\n
2. Optimized performance\n
3. Splash\n
4. Fixed bugs\n\n
— 3.0 —\n
1. New design\n
2. Adding new calculations\n
3. Adding units of angle\n
4. Supporting night mode\n
5. Fixed bugs\n\n
— 3.8 —\n
1. Adding new calculations\n\n
— 4.0 —\n
1. Adding new language: Indonesian\n
2. Adding new calculations\n
3. Fixed bugs\n\n
— 4.5 —\n
1. Adding new calculations\n\n
— 5.0 —\n
1. New design\n
2. Adding new calculations\n
3. Improve Performance\n
4. Fixed bugs\n\n
— 5.25 —\n
1. Adding new feature: "Premium"\n
2. Fixed bugs\n\n
— 5.50 —\n
1. Fixed bugs\n\n
— 5.50.5 —\n
1. Fixed bugs\n\n
— 6.0 —\n
1. New design\n
2. Adding new feature: Number to Words\n
3. Adding new calculations\n
4. Optimize performance &amp; fixed bugs\n\n
— 6.3 —\n
1. Optimize performance &amp; fixed bugs\n
2. Minor changes\n\n
— 6.3.3 —\n
1. Fixed a bug &amp; minor changes\n\n
— 6.5 —\n
1. Minor changes\n\n
— 6.5.1 —\n
1. Reduce the frequency of showing ads in free version\n\n
— 6.5.1.2 —\n
1. Fixed bugs\n\n
— 6.8 —\n
1. Fixed bugs\n\n
— 7.0 —\n
1. More trigonometry functions\n
2. Expanded some calculations\n
3. Adding new Unit Conversions\n
4. Adding new calculations\n
5. Fixed bugs &amp; optimized performance\n\n
— 7.2 —\n
1. Fixed a minor bug\n\n
— 8.0 —\n
1. New design\n
2. Adding new calculations\n
3. Fixed bugs\n
4. Adding new Unit Conversions\n
5. Optimized performance\n\n
— 8.1 —\n
1. Fixed bugs\n
2. Change the premium from monthly subscription to one-time purchase\n\n
— 8.21 —\n
1. Updated libraries and system requirements for the newest Android version.\n\n
— 8.22 —\n
1. Fixed bugs\n\n
    </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="selectone_numerals">Select one of the numeral systems to get the results</string>
    <string name="kinematicsdynamicsstatics">Kinematics, Dynamics, Statics</string>
    <string name="momentum">Momentum</string>
    <string name="bsa">Body Surface Area</string>
    <string name="sedentary">Little to no exercise</string>
    <string name="lightexercise">Light exercise 20 minutes 1 to 3 times/week</string>
    <string name="moderateexercise">Moderate exercise for at least 30 to 60 minutes 3 to 4 times/week</string>
    <string name="tdee">Total Daily Energy Expenditure</string>
    <string name="heavyexercise">Heavy exercise for 60 minutes or greater 5 to 7 days/week</string>
    <string name="extremeexercise">Extreme (athlete-like) exercises</string>
    <string name="waistratio">Waist Ratio</string>
    <string name="waistcircumference">Waist circumference</string>
    <string name="hipcircumference">Hip circumference</string>
    <string name="waisttoheight">Waist to height ratio: </string>
    <string name="waisttohip">Waist to hip ratio: </string>
    <string name="yourhealthrisk">Your health risk: </string>
    <string name="selectgender">Select your gender</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="lowbp">Low Blood Pressure</string>
    <string name="idealbp">Ideal Blood Pressure</string>
    <string name="invalid">Invalid</string>
    <string name="bprule">Blood pressure measurement based on AHA and ACC</string>
    <string name="bloodpressure">Blood Pressure</string>
    <string name="highbp1">High blood pressure (Hypertension) Stage 1</string>
    <string name="highbp2">High blood pressure (Hypertension) Stage 2</string>
    <string name="cardiac_index">Cardiac Index</string>
    <string name="strokevolume">Stroke volume</string>
    <string name="ci_heartrate">Heart rate</string>
    <string name="cardiac_output">Cardiac output</string>
    <string name="normal">normal</string>
    <string name="abnormal">abnormal</string>
    <string name="albumin_hint">Albumin</string>
    <string name="serumcalcium">Serum calcium</string>
    <string name="calciumcorrection">Calcium Correction</string>
    <string name="lean_bm">Lean Body Mass</string>
    <string name="bmr_k_m" translatable="false">BMR (Katch-McArdle)</string>
    <string name="neckcircum">Neck circumference</string>
    <string name="bodyfat">Body fat</string>
    <string name="ffmi" translatable="false">FFMI</string>
    <string name="nffmi">Normalized FFMI</string>
    <string name="ffm">Fat-free mass</string>
    <string name="tbf">Total body fat</string>
    <string name="widelyused">(widely used)</string>
    <string name="day">day</string>
    <string name="molality">Molality</string>
    <string name="molessolute">Moles of solute</string>
    <string name="masssolvent">Mass of solvent</string>
    <string name="chemistry">Chemistry</string>
    <string name="molarmass">Molar mass</string>
    <string name="concentration">Concentration</string>
    <string name="enddate">End Date</string>
    <string name="fabricwidth">Fabric width</string>
    <string name="piecewidth">Piece width</string>
    <string name="piecelength">Piece length</string>
    <string name="numberofpieces">Number of pieces</string>
    <string name="lengthofmaterialyouwillneed">Length of material you will need</string>
    <string name="rows_down">rows down</string>
    <string name="piecesacross">pieces across</string>
    <string name="relativity">Relativity</string>
    <string name="einsteintheory">Einstein\'s Theory</string>
    <string name="percentagepercentage">Percentage (%)</string>
    <string name="speedofobject">Speed of object</string>
    <string name="speedofsound">Speed of sound</string>
    <string name="frictioncoefficient">Friction coefficient</string>
    <string name="normalforce">Normal force</string>
    <string name="force">Force</string>
    <string name="bodyshape">Body Shape</string>
    <string name="bloodcirculation">Blood Circulation</string>
    <string name="romannumeral">Roman Numeral</string>
    <string name="geometry">Geometry</string>
    <string name="twoD" translatable="false">2D</string>
    <string name="threeD" translatable="false">3D</string>
    <string name="rfmass">Relative Fat Mass</string>
    <string name="bf_ffmi"><![CDATA[Body Fat & Fat-Free Mass Index]]></string>
    <string name="molarity">Molarity</string>
    <string name="fabric">Fabric</string>
    <string name="lorentzfactor">Lorentz Factor</string>
    <string name="machnumber">Mach Number</string>
    <string name="friction">Friction</string>
    <string name="pressure">Pressure</string>
    <string name="median">Median</string>
    <string name="degree">Degree</string>
    <string name="radian">Radian</string>
    <string name="gradian">Gradian</string>
    <string name="angleturn">Turn</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="listofnumbers">List of numbers</string>
    <string name="radius">Radius</string>
    <string name="diameter">Diameter</string>
    <string name="circumference">Circumference</string>
    <string name="perimeter">Perimeter</string>
    <string name="yradius">Y radius</string>
    <string name="xradius">X radius</string>
    <string name="base">Base</string>
    <string name="ylength">Y length</string>
    <string name="xlength">X length</string>
    <string name="toplength">Top length</string>
    <string name="baselength">Base length</string>
    <string name="leftandright">Left and right</string>
    <string name="leftlength">Left length</string>
    <string name="rightlength">Right length</string>
    <string name="leftangle">Left angle</string>
    <string name="results">Results</string>
    <string name="instructions">Instructions</string>
    <string name="resetall">Reset all</string>
    <string name="matrix_a">Matrix A</string>
    <string name="matrix_b">Matrix B</string>
    <string name="back">Back</string>
    <string name="Number_to_words">Number-to-words</string>
    <string name="from">From</string>
    <string name="twentyfourhours">24-hours</string>
    <string name="select">Select</string>
    <string name="versionhistory">Version History</string>
    <string name="To">To</string>
    <string name="numberofmatrices">Number of matrices</string>
    <string name="getpremium">Get Premium</string>
</resources>