<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/versionhistory"
        style="@style/blackandwhitetext"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp">

        <TextView
            android:id="@+id/textView4"
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/version_history"
            android:textIsSelectable="true" />
    </ScrollView>


    <Button
        android:id="@+id/vh_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>