<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        style="@style/blackandwhitetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:text="@string/action_settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="4"
            android:src="@drawable/numberstowords" />

        <Switch
            android:id="@+id/towordsswitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Number_to_words" />

    </LinearLayout>


    <TextView
        style="@style/blackandwhitetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/others" />

    <LinearLayout
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="4"
            android:src="@drawable/about" />

        <TextView
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_right"
            android:gravity="center_vertical"
            android:paddingEnd="13dp"
            android:text="@string/about"
            tools:ignore="UseCompatTextViewDrawableXml" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/privacypolicy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="4"
            android:src="@drawable/privacypolicy" />

        <TextView
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_right"
            android:gravity="center_vertical"
            android:paddingEnd="13dp"
            android:text="@string/privacypolicy"
            tools:ignore="UseCompatTextViewDrawableXml" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/versionhistory_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="4"
            android:src="@drawable/versionhistory" />

        <TextView
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/arrow_right"
            android:gravity="center_vertical"
            android:paddingEnd="13dp"
            android:text="@string/versionhistory"
            tools:ignore="UseCompatTextViewDrawableXml" />


    </LinearLayout>


</LinearLayout>