<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matrix_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".contents.independents.matrix">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberofmatrices" />

        <Spinner
            android:id="@+id/matrix1or2"
            android:layout_width="match_parent"
            android:layout_height="40dp" />


        <LinearLayout
            android:id="@+id/a124dsfsf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matrix_inst"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/instruction"
                android:gravity="center"
                android:text="@string/instructions" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matrix_resall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/reset"
                android:gravity="center"
                android:text="@string/resetall" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/asasjd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView12"
                style="@style/blackandwhitetext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/matrix_a"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matrix_reset_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/reset"
                android:gravity="center"
                android:text="@string/reset" />
        </LinearLayout>

        <EditText
            android:id="@+id/matrix_first"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/customborder"
            android:ems="10"
            android:gravity="start|top"
            android:hint="1, 2, 3, 4\n1, 2, 3, 4"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:id="@+id/safafd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/dfgsdsv"
                style="@style/blackandwhitetext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/matrix_b"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matrix_reset_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/reset"
                android:gravity="center"
                android:text="@string/reset" />
        </LinearLayout>

        <EditText
            android:id="@+id/matrix_second"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/customborder"
            android:ems="10"
            android:gravity="start|top"
            android:hint="1, 2, 3, 4\n1, 2, 3, 4"
            android:inputType="textMultiLine" />


        <LinearLayout
            android:id="@+id/masfiqenfoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/matrix_condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/matrix_calculate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/calculator"
                android:gravity="center"
                android:text="@string/calculate" />


        </LinearLayout>


        <TextView
            android:id="@+id/textView26"
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/results" />

        <TextView
            android:id="@+id/matrix_result"
            style="@style/blackandwhitetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/customborder4"
            android:gravity="center"
            android:padding="15dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>