<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".contents.independents.timezone">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from" />

    <Spinner
        android:id="@+id/tz_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/tz_from_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="AM/PM" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twentyfourhours" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tz_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/timezone"
        android:textSize="20sp"
        android:text="@string/select" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/To" />

    <Spinner
        android:id="@+id/tz_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/tz_to_rb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/sdf32f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="AM/PM" />

        <RadioButton
            android:id="@+id/sdfw442"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twentyfourhours" />
    </RadioGroup>

    <TextView
        android:id="@+id/tz_result"
        android:textIsSelectable="true"
        style="@style/blackandwhitetext"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:gravity="center"
        android:textSize="50sp" />

</LinearLayout>